--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ coreschema==0.0.4
 cryptography==37.0.4
 defusedxml==0.7.1
 Django==3.2.15
+django-colorfield==0.8.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
@@ -14,6 +15,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.4.0
 flake8==5.0.4
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.12.0
 itypes==1.2.0
@@ -40,4 +42,3 @@ sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.11
 zipp==3.8.1
-gunicorn==20.1.0
